apps/services/prefect/patch-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prefect-server
  namespace: prefect
spec:
  template:
    spec:
      containers:
        - name: prefect-server
